# Quant-app

./: .gitignore  CLAUDE.md  To_do and notes.txt  To_do_and_notes.txt  app.py  main.py  pytest.ini  requirements.txt
.claude/: launch.json
data_transforms/: 1m_advanced_indicators.py  1m_ohlcv_globex_mixed_assets.py  1s_mbo_cropped.py  1s_mbo_full_book.py  big_trades.py  options_5m.py  options_eod_chain.py  options_gex_1m.py  options_greeks_eod.py  options_oi_snapshot.py  settlement_reference.py
ff_data_scraper/: ff_parser.py
heatmap_rs/: Cargo.toml  pyproject.toml
heatmap_rs/src/: lib.rs
legacy_streamlit/: README.md
modules/: __init__.py  app.py
monte_carlo/: base.py  bootstrap.py  prop_firm.py
optimization/: engine.py  io.py  loader.py  metrics.py  param_space.py
orderbook_replay_cpp/: pyproject.toml  setup.py
orderbook_replay_rs/: Cargo.toml  pyproject.toml
orderbook_replay_rs/src/: lib.rs
position_sizing/: fixed.py  kelly.py  risk_based.py
scripts/: display_file.py  example_hello.py  example_plain.py
strategies/: base.py  fvg_ifvg.py  ivb_model1_v1.py  ivb_model2_v2(flipping)_updated_vp.py  ivb_model_2.py  orb.py
tests/: conftest.py  test_backtester_metrics.py  test_backtester_persistence.py  test_buckets.py  test_combine.py  test_engine_io.py  test_ivb_params.py  test_metrics.py  test_options_gex.py  test_param_space.py  test_qt_smoke.py  test_scripts_module.py  test_trade_files.py  test_view_smoke.py  test_vwap_trend.py
transforms/: 1m_advanced.py  1m_advanced_indicators.py  1m_advanced_vectorized.py  1m_ohlcv_globex_mixed_assets.py  (+5 more)
(+184 files in other folders)
