[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "heatmap_rs"
version = "0.1.0"
description = "Rust L3 order-book replay kernel for the 1s MBO heatmap transforms"
requires-python = ">=3.13"
classifiers = ["Programming Language :: Rust"]

[tool.maturin]
features = ["pyo3/extension-module"]
