[package]
name = "orderbook_replay_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "orderbook_replay_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
numpy = "0.26"
rustc-hash = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
